# AgentBasedSIRlib

./: .gitignore  CMakeLists.txt  SIRlib-config.cmake  ideas for EventQueue  sketch.txt
SIRlib/: CMakeLists.txt  sketch.txt
SIRlib/example/: CMakeLists.txt
SIRlib/include/SIRlib/: EventQueue.h  Individual.h  SIRlib.h
SIRlib/input/: SIR Parameters.csv  SIRSimSettings.csv
SIRlib/src/: CMakeLists.txt  SIRlib.cpp
SIRlib/tests/: CMakeLists.txt  tests-EventQueue.cpp  tests-EventQueueWithState.cpp  tests-SIRSimulation.cpp
TestSIRlib/: CMakeLists.txt  RunSIRsim.py  SIRSimRunner.cpp  SIRSimRunner.h  SIRsimPyModule.cpp  agent_based.py  calibrate-SIRsim-multi.cpp  calibrate-SIRsim-serial.cpp  run-SIRsim-parallel.cpp  run-SIRsim-serial.cpp  run-SIRsim.cpp  setup.py  setup.py.in  visualize.py
example/: run-SIRlib.cpp
include/SIRlib/: EventQueue.h  Individual.h  SIRlib.h
src/: CMakeLists.txt  EventQueue.h  Individual.h  SIRlib.cpp
tests/: CMakeLists.txt  tests-EventQueue.cpp  tests-EventQueueWithState.cpp
